form validation in register form

--- a/src/app/account/register/register.component.html
+++ b/src/app/account/register/register.component.html
@@ -3,6 +3,11 @@
 	<div class="form-group">
 		<label>Email<app-star-badge></app-star-badge></label>
 		<input type="text" formControlName="email">
+		<p class="form-inline-error"
+		   *ngIf="registerForm.get('email').touched && registerForm.get('email').errors">
+			{{ registerForm.get('email').errors.required ? 'Field is required.' : '' }}
+			{{ registerForm.get('email').errors.email ? 'Please enter a valid email address.' : '' }}
+		</p>
 	</div>
 	<div class="form-group">
 		<label>Username</label>
@@ -16,10 +21,19 @@
 	<div class="form-group">
 		<label>Password<app-star-badge></app-star-badge></label>
 		<input type="password" formControlName="password">
+		<p class="form-inline-error"
+		   *ngIf="registerForm.get('password').touched && registerForm.get('password').errors">
+			{{ registerForm.get('password').errors.minlength ? 'Password should be at least 6 characters.' : '' }}
+			{{ registerForm.get('password').errors.required ? 'Field is required.' : '' }}
+		</p>
 	</div>
 	<div class="form-group">
 		<label>Confirm password<app-star-badge></app-star-badge></label>
 		<input type="password" formControlName="confirmPassword">
+		<p class="form-inline-error"
+		   *ngIf="registerForm.get('confirmPassword').touched && registerForm.errors && registerForm.errors.comparePasswords">
+			Passwords don't match.
+		</p>
 	</div>
 	<div class="form-group">
 		<p>Fields marked with <app-star-badge></app-star-badge> are required</p>
