--- a/src/app/main/projects/project/project.component.html
+++ b/src/app/main/projects/project/project.component.html
@@ -8,34 +8,34 @@
 			</li>
 			<li><hr></li>
 			<li class="menu-item">
-				<a [routerLink]="['flow-preview']">
+				<a [routerLink]="['flow-preview']" routerLinkActive="route-active">
 					Preview Flow
 				</a>
 			</li>
 			<li class="menu-item">
-				<a [routerLink]="['flow-edit']">
+				<a [routerLink]="['flow-edit']" routerLinkActive="route-active">
 					Edit Flow
 				</a>
 			</li>
 			<li><hr></li>
 			<li class="menu-item">
-				<a [routerLink]="['files-inspect']">
+				<a [routerLink]="['files-inspect']" routerLinkActive="route-active">
 					Inspect Files
 				</a>
 			</li>
 			<li class="menu-item">
-				<a [routerLink]="['files-add']">
+				<a [routerLink]="['files-add']" routerLinkActive="route-active">
 					Upload Files
 				</a>
 			</li>
 			<li><hr></li>
 			<li class="menu-item">
-				<a [routerLink]="['edit']">
+				<a [routerLink]="['edit']" routerLinkActive="route-active">
 					Edit Project Details
 				</a>
 			</li>
 			<li class="menu-item">
-				<a [routerLink]="['delete']">
+				<a [routerLink]="['delete']" routerLinkActive="route-active">
 					Delete Project
 				</a>
 			</li>
