--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Indie+Flower&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Athiti&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Athiti:wght@400;700&display=swap');
 
 // Sass Variables (except the color variables)
 
