--- a/src/app/main/profile/profile.component.html
+++ b/src/app/main/profile/profile.component.html
@@ -1,6 +1,13 @@
 <h2 class="page-header">My Profile</h2>
 
 <div class="profile-page-container">
+
+	<div class="text-center">
+		<button type="button" class="btn danger-btn" (click)="logout()">Logout</button>
+	</div>
+
+	<br>
+
 	<form [formGroup]="userDetailForm" (ngSubmit)="submitUserDetailForm()" class="form detail-form">
 		<h3 class="form-title">User details</h3>
 		<div class="form-group">
@@ -30,7 +37,8 @@
 		<button type="submit" class="btn success-btn form-btn">Save</button>
 	</form>
 
-	<br><br>
+	<br>
+	<br>
 
 	<form [formGroup]="changePasswordForm" (ngSubmit)="submitChangePasswordForm()" class="form detail-form">
 		<h3 class="form-title">Change Password</h3>
@@ -69,7 +77,8 @@
 		<button type="submit" class="btn success-btn form-btn">Update Password</button>
 	</form>
 
-	<br><br>
+	<br>
+	<br>
 
 
 	<form [formGroup]="deleteAccountForm" (ngSubmit)="submitDeleteAccountForm()" class="form detail-form">
@@ -91,4 +100,9 @@
 		</div>
 		<button type="submit" class="btn success-btn form-btn">Delete my account</button>
 	</form>
+
+	<br>
+	<br>
+	<br>
+
 </div>
