update create project form

--- a/src/app/main/projects/project/files-uploader/files-uploader.component.html
+++ b/src/app/main/projects/project/files-uploader/files-uploader.component.html
@@ -36,7 +36,7 @@
 				<div class="form-group col-7">
 					<label
 						for="{{'fileNo'+i}}"
-						class="form-group-label">{{i+1}}</label>
+						class="input-label">{{i+1}}</label>
 					<input
 						formControlName="name"
 						id="{{'fileNo'+i}}"
