--- a/src/app/main/projects/create-project-form/create-project-form.component.html
+++ b/src/app/main/projects/create-project-form/create-project-form.component.html
@@ -3,12 +3,20 @@
 <form [formGroup]="projectCreateForm" (ngSubmit)="saveProjectCreateForm()" class="form detail-form">
 	<h3 class="form-title">Details</h3>
 	<div class="form-group">
-		<label class="form-group-label">Project name</label>
-		<input class="form-input" type="text" formControlName="name">
+		<label class="input-label">Project name</label>
+		<div class="input-group">
+			<input class="form-input" type="text" formControlName="name">
+			<p class="form-inline-error"
+			   *ngIf="projectCreateForm.get('name').touched && projectCreateForm.get('name').errors">
+				{{ projectCreateForm.get('name').errors.required ? 'Field is required.' : '' }}
+			</p>
+		</div>
 	</div>
 	<div class="form-group">
-		<label class="form-group-label">Description</label>
-		<input class="form-input" type="text" formControlName="description">
+		<label class="input-label">Description</label>
+		<div class="input-group">
+			<input class="form-input" type="text" formControlName="description">
+		</div>
 	</div>
 	<button type="submit" class="btn success-btn form-btn">Create Project</button>
 </form>
