--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -5,8 +5,10 @@
 
 <footer>
 	<div class="footer-links">
-		<a>Credits</a> &nbsp;
-		<app-star-badge></app-star-badge> &nbsp;
-		<a>Docs</a>
+		<app-star-badge></app-star-badge>
+		&nbsp;
+		<span>v0.1</span>
+		&nbsp;
+		<app-star-badge></app-star-badge>
 	</div>
 </footer>
