--- a/src/app/main/projects/project/files-uploader/files-uploader.component.html
+++ b/src/app/main/projects/project/files-uploader/files-uploader.component.html
@@ -6,51 +6,57 @@
 	<h3 class="form-title col-12">Upload Files</h3>
 	<div dropzone class="dropzone col-12"
 		 (hovered)="toggleHover($event)" (dropped)="onDrop($event)" [class.hovering]="isHovering">
-		<h4>drop files here</h4>
+		<h4>drop images here</h4>
 	</div>
 
 	<ng-container *ngIf="filePreviews.length">
-		<div class="row">
-			<div class="col-4">
-				<h4>Preview</h4>
-			</div>
-			<div class="col-1">
-				<h4>#</h4>
-			</div>
-			<div class="col-7">
-				<h4>Display name</h4>
-			</div>
-		</div>
-
 		<ul formArrayName="filePreviews"
 			class="file-preview-container">
 
-			<li [formGroupName]="i"
-				*ngFor="let file of filePreviews.controls; let i=index"
-				class="file-list-item row">
-
-				<div class="file-preview col-4">
-					<img [src]="file.get('base64').value" alt="file preview">
-				</div>
-
-				<div class="form-group col-7">
-					<label
-						for="{{'fileNo'+i}}"
-						class="input-label">{{i+1}}</label>
-					<input
-						formControlName="name"
-						id="{{'fileNo'+i}}"
-						type="text"
-						placeholder="Enter a name for this file"
-						class="form-input">
+			<li class="row">
+				<div class="col-4">
+					<h4>Preview</h4>
 				</div>
 				<div class="col-1">
-					<button type="button" (click)="removeFilePreview(i)">
+					<h4>#</h4>
+				</div>
+				<div class="col-7">
+					<h4>Display name</h4>
+				</div>
+			</li>
+
+			<li class="row file-preview" [formGroupName]="i" *ngFor="let file of filePreviews.controls; let i=index" >
+
+				<div class="col-4">
+					<img class="file-preview-img" [src]="file.get('base64').value" alt="file preview">
+				</div>
+
+				<div class="col-7">
+					<div class="form-group">
+						<label for="{{'fileNo'+i}}" class="input-label">
+							{{i+1}}
+						</label>
+						<div class="input-group">
+							<input
+								formControlName="name"
+								id="{{'fileNo'+i}}"
+								type="text"
+								placeholder="Enter a name for this file"
+								class="form-input">
+							<p class="form-inline-error"
+							   *ngIf="file.invalid && !file.pristine || uploadFilesForm.errors && file.invalid">
+								Please enter a name for this file
+							</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-1">
+					<button class="btn" type="button" (click)="removeFilePreview(i)">
 						<i class="fas fa-trash"></i>
 					</button>
 				</div>
-				<p *ngIf="file.invalid && !file.pristine || uploadFilesForm.errors && file.invalid"
-				   class="form-inline-error col-12">Please enter a name for this file</p>
+
 			</li>
 		</ul>
 		<button type="submit" class="btn success-btn form-btn">Save</button>
