--- a/src/assets/scss/components/_buttons.scss
+++ b/src/assets/scss/components/_buttons.scss
@@ -5,8 +5,11 @@
 	border: 2px solid $theme-background;
 	padding: 12px;
 	border-radius: 4px;
-	//min-width: 200px;
 	margin-top: 10px;
+	transition: filter 0.1s ease;
+	&:hover {
+		filter: brightness(0.85);
+	}
 }
 
 .small-btn {
