--- a/src/assets/scss/components/_forms.scss
+++ b/src/assets/scss/components/_forms.scss
@@ -2,11 +2,10 @@
 
 .form-title {
 	display: flex;
-	margin: 0px 5px 10px 5px;
+	margin-bottom: 10px;
 	font-family: $font-handwritten;
 }
 .form-note {
-	text-align: right;
 	margin-bottom: 10px;
 }
 .form-error,
@@ -20,13 +19,9 @@
 }
 
 .img-preview {
-    max-height: 200px;
+	max-height: 200px;
 }
 
-.detail-form {
-	display: flex;
-	flex-direction: column;
-}
 
 .form,
 .detail-form {
@@ -44,13 +39,13 @@
 	margin-bottom: 5px;
 
 	.input-label {
-		flex-grow: 1;
-		width: 0;
+		flex: 0 0 calc(20% - 20px);
 		padding: 12px 10px;
 	}
 	.input-group {
+		flex: 0 0 calc(80% - 20px);
 		.form-input {
-			width: 50vw;
+			width: 100%;
 			border: 1px solid $theme-text;
 			border-radius: 4px;
 			padding: 10px;
