--- a/src/styles.scss
+++ b/src/styles.scss
@@ -41,8 +41,7 @@
 @import './assets/scss/pages/_home';
 @import './assets/scss/pages/_contact';
 @import './assets/scss/pages/_user-profile';
-@import 'assets/scss/pages/_project-details';
-@import 'assets/scss/pages/_flow-edit';
+@import './assets/scss/pages/_flow-edit';
 
 // Themes
 @import './assets/scss/themes/_admin';
