provide notifications when files to be uploaded do not meet system requirements

--- a/src/app/main/projects/project/files-uploader/files-uploader.component.html
+++ b/src/app/main/projects/project/files-uploader/files-uploader.component.html
@@ -6,7 +6,7 @@
 	<h3 class="form-title col-12">Upload Files</h3>
 	<div dropzone class="dropzone col-12"
 		 (hovered)="toggleHover($event)" (dropped)="onDrop($event)" [class.hovering]="isHovering">
-		<h4>drop images here</h4>
+		<h4>Drop images here</h4>
 	</div>
 
 	<ng-container *ngIf="filePreviews.length">
