--- a/src/assets/scss/base/_typography.scss
+++ b/src/assets/scss/base/_typography.scss
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Indie+Flower&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Athiti:wght@400;700&display=swap');
+
+
+$font-handwritten: 'Athiti', sans-serif; // 'Indie Flower', cursive;
+$font-normal: 'Athiti', sans-serif;
 
 
 
