--- a/src/assets/scss/pages/_flow-edit.scss
+++ b/src/assets/scss/pages/_flow-edit.scss
@@ -7,33 +7,24 @@
 	overflow: hidden;
 }
 
-.navigator-area {
-	background-color: $theme-light;
+.edit-flow-menu {
 	position: absolute;
-	height: 12rem;
 	left: 0;
 	bottom: 0;
 	right: 0;
-	overflow-x: scroll;
-	overflow-y: hidden;
-
-	flex-flow: row nowrap;
+	&.minified {
+		.navigator-area {
+			height: 0px;
+		}
+	}
 }
 
 .actions-area {
 	background-color: $theme-light;
-	position: absolute;
-	left: 0;
-	bottom: 12rem;
-	right: 0;
 	justify-content: space-between;
 	flex-direction: row-reverse;
-	padding: 10px 20px 20px 20px;
+	padding: 10px 20px;
 	border-top: 1px #F0F0F0 solid;
-	border-bottom: 1px #F0F0F0 solid;
-
-	height: 36px;
-
 	* {
 		display: inline;
 	}
@@ -44,3 +35,14 @@
 		margin-left: 10px;
 	}
 }
+
+.navigator-area {
+	background-color: $theme-light;
+	overflow-x: scroll;
+	overflow-y: hidden;
+	flex-flow: row nowrap;
+	border-top: 1px #F0F0F0 solid;
+	height: 188px;
+	transition: height 0.5s ease-in-out;
+}
+
