--- a/src/assets/scss/layout/_gallery.scss
+++ b/src/assets/scss/layout/_gallery.scss
@@ -15,6 +15,30 @@ $transition-easing: cubic-bezier(0.075, 0.82, 0.165, 1);
 	transition: box-shadow $transition-delay $transition-easing;
 	transition: transform $transition-delay $transition-easing;
 
+	&:hover {
+		box-shadow: 0px 3px 10px 2px rgba(0,0,0,0.2);
+		transform: scale(1.05);
+	}
+	&.inactive {
+		&:hover {
+			box-shadow: 0px 0px 0px 4px $theme-focus;
+			transform: none;
+		}
+	}
+	&.small {
+		width: 230px;
+		.gallery-item-preview {
+			min-height: 7.1rem;
+		}
+		.gallery-item-details {
+			padding: 0.5rem;
+		}
+	}
+	&.selected {
+		box-shadow: 0px 0px 0px 4px $theme-focus;
+		transform: scale(1);
+	}
+
 	.gallery-item-preview {
 		min-width: 280px;
 		min-height: 10rem;
@@ -28,14 +52,12 @@ $transition-easing: cubic-bezier(0.075, 0.82, 0.165, 1);
 	}
 
 	.gallery-item-details {
+		.row {
+			align-items: baseline;
+			justify-content: space-between;
+		}
 		background-color: $theme-light;
 		padding: 1rem;
-		i {
-			float: right;
-			&:hover {
-				color: $theme-accent;
-			}
-		}
 	}
 	.gallery-item-actions {
 		padding: 0 1rem 1rem;
@@ -43,24 +65,7 @@ $transition-easing: cubic-bezier(0.075, 0.82, 0.165, 1);
 			float: right;
 		}
 	}
-	&:hover {
-		box-shadow: 0px 3px 10px 2px rgba(0,0,0,0.2);
-		transform: scale(1.05);
-	}
 
-	&.small {
-		width: 230px;
-		.gallery-item-preview {
-			min-height: 7.1rem;
-		}
-		.gallery-item-details {
-			padding: 0.5rem;
-		}
-	}
-	&.selected {
-		box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.3);
-		transform: scale(1);
-	}
 }
 
 .create-new-item {
