minor ui improvements

--- a/src/app/main/projects/create-project-form/create-project-form.component.html
+++ b/src/app/main/projects/create-project-form/create-project-form.component.html
@@ -15,7 +15,7 @@
 	<div class="form-group">
 		<label class="input-label">Description</label>
 		<div class="input-group">
-			<input class="form-input" type="text" formControlName="description">
+			<textarea formControlName="description" class="form-input" rows="10"></textarea>
 		</div>
 	</div>
 	<button type="submit" class="btn success-btn form-btn">Create Project</button>
