--- a/src/app/main/projects/project/flow-preview/flow-preview.component.html
+++ b/src/app/main/projects/project/flow-preview/flow-preview.component.html
@@ -1,6 +1,6 @@
 
 <h3 class="page-header">Active file name: {{activeFile ? activeFile.name : '-'}}</h3>
-<span *ngIf="!activeFile" class="text-center">
+<span *ngIf="showBackButton" class="text-center">
 	<p>This file might have been deleted.</p>
 	<p *ngIf="!activeFile" class="text-center">
 		<button type="button" class="btn small-btn" (click)="prevFile()">Go back</button> to previous file.
