--- a/src/app/main/profile/profile.component.html
+++ b/src/app/main/profile/profile.component.html
@@ -1,9 +1,5 @@
 <h2 class="page-header">My Profile</h2>
 
-<div class="text-center">
-	<button type="button" class="btn danger-btn" (click)="logout()">Logout</button>
-</div>
-
 <br>
 
 <form [formGroup]="userDetailForm" (ngSubmit)="submitUserDetailForm()" class="form detail-form">
@@ -78,7 +74,6 @@
 <br>
 <br>
 
-
 <form [formGroup]="deleteAccountForm" (ngSubmit)="submitDeleteAccountForm()" class="form detail-form">
 	<h3 class="form-title">Delete account</h3>
 	<div class="form-note">
@@ -100,6 +95,13 @@
 </form>
 
 <br>
+<br>
+
+<div class="form detail-form">
+	<h3 class="form-title">Log out</h3>
+	<button type="button" class="btn danger-btn" (click)="logout()">Log out</button>
+</div>
+
 <br>
 <br>
 
