--- a/src/app/main/projects/project/flow-edit/flow-edit.component.html
+++ b/src/app/main/projects/project/flow-edit/flow-edit.component.html
@@ -4,6 +4,7 @@
 		*ngIf="activeFile"
 		[imgUrl]="activeFile.base64"
 		[linksToDraw]="showLinksOnActiveFile ? linksOnActiveFile : null"
+		[isDrawModeOn]="!showLinksOnActiveFile"
 		(onAreaSelected)="areaSelected($event)"
 		(onCanvasCleared)="closeSelectionMenu()"
 	></app-editor>
