--- a/src/app/account/register/register.component.html
+++ b/src/app/account/register/register.component.html
@@ -30,9 +30,14 @@
 	<div class="form-group">
 		<label>Confirm password<app-star-badge></app-star-badge></label>
 		<input type="password" formControlName="confirmPassword">
+
+		<p class="form-inline-error"
+		   *ngIf="registerForm.get('confirmPassword').touched && registerForm.get('confirmPassword').errors">
+			{{ registerForm.get('confirmPassword').errors.required ? 'Field is required.' : '' }}
+		</p>
 		<p class="form-inline-error"
 		   *ngIf="registerForm.get('confirmPassword').touched && registerForm.errors && registerForm.errors.comparePasswords">
-			Passwords don't match.
+			Passwords don't match form.
 		</p>
 	</div>
 	<div class="form-group">
