--- a/src/app/main/profile/profile.component.html
+++ b/src/app/main/profile/profile.component.html
@@ -25,7 +25,7 @@
 	<div class="form-group">
 		<label class="input-label">Active projects</label>
 		<div class="input-group">
-			<input class="form-input" type="number" formControlName="projectsCount" disabled>
+			<input class="form-input" type="number" formControlName="projectsCount">
 		</div>
 	</div>
 	<button type="submit" class="btn success-btn form-btn">Save</button>
