save displayName in firebase auth and other auth refactoring

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-nav [currentUserId]="currentUserId"></app-nav>
+<app-nav [currentUser]="currentUser"></app-nav>
 
 <router-outlet></router-outlet>
 
