added a demo tutorial in homepage

--- a/src/app/main/projects/project/files-uploader/files-uploader.component.html
+++ b/src/app/main/projects/project/files-uploader/files-uploader.component.html
@@ -51,7 +51,7 @@
 								class="form-input">
 							<p class="form-inline-error"
 							   *ngIf="file.invalid && !file.pristine || uploadFilesForm.errors && file.invalid">
-								Please enter a name for this file
+								Please enter a name for this image
 							</p>
 						</div>
 					</div>
