--- a/src/assets/scss/components/_logo.scss
+++ b/src/assets/scss/components/_logo.scss
@@ -20,6 +20,7 @@ $lemonLogoSize: 100px;// pixels
         background-color: $inner;
         border-radius: 50%;
     }
+	margin-bottom: 2rem;
 }
 .lemon-petal {
     background-color: $outter;
