--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -7,4 +7,8 @@
     align-items: center;
 }
 
-
+.demo-video-container {
+	border: 1px solid $mercury;
+	box-shadow: 1px 1px 9px -2px rgba(0, 0, 0, 0.3);
+	margin: 1rem auto 5rem auto;
+}
