edit flow listen for canvas click events when links are visible

--- a/src/app/main/projects/project/flow-edit/flow-edit.component.html
+++ b/src/app/main/projects/project/flow-edit/flow-edit.component.html
@@ -3,10 +3,11 @@
 	<app-editor
 		*ngIf="activeFile"
 		[imgUrl]="activeFile.base64"
-		[linksToDraw]="showLinksOnActiveFile ? linksOnActiveFile : null"
+		[links]="showLinksOnActiveFile ? linksOnActiveFile : null"
 		[isDrawModeOn]="!showLinksOnActiveFile"
 		(onAreaSelected)="areaSelected($event)"
 		(onCanvasCleared)="closeSelectionMenu()"
+		(onLinkAreaClicked)="linkAreaClicked($event)"
 	></app-editor>
 
 	<div class="edit-flow-menu" #editFlowMenu>
