--- a/src/app/main/projects/project/flow-edit/flow-edit.component.html
+++ b/src/app/main/projects/project/flow-edit/flow-edit.component.html
@@ -29,7 +29,7 @@
 			</div>
 
 			<div *ngIf="showSelectionMenu">
-				<form [formGroup]="linkToFileForm" (ngSubmit)="saveLink()">
+				<form [formGroup]="createLinkForm" (ngSubmit)="onCreateLinkSubmit()">
 					<div class="form-group">
 						<label class="input-label">Link to:</label>
 						<select class="form-input" formControlName="fileId">
@@ -44,6 +44,10 @@
 					<button type="submit" class="btn success-btn small-btn">Save</button>
 					<button type="button" (click)="closeSelectionMenu()" class="btn danger-btn small-btn">Cancel</button>
 				</form>
+			</div>
+
+			<div *ngIf="showEditLinkMenu">
+
 			</div>
 
 		</div>
