--- a/src/app/main/projects/project/flow-edit/flow-edit.component.html
+++ b/src/app/main/projects/project/flow-edit/flow-edit.component.html
@@ -61,7 +61,7 @@
 						</select>
 					</div>
 					<button type="submit" class="btn success-btn small-btn">Save</button>
-					<button type="button" class="btn danger-btn small-btn">Delete link</button>
+					<button type="button" (click)="deleteLink()" class="btn danger-btn small-btn">Delete link</button>
 					<button type="button" (click)="closeEditLinkMenu()" class="btn small-btn">Cancel</button>
 				</form>
 			</div>
