--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -1,11 +1,8 @@
 <div class="home-hero">
 	<h1 class="logo-text">Lemon Pie</h1>
-	<app-lemon-pie-logo></app-lemon-pie-logo>
-
-	<h3 class="page-header">Demo</h3>
 
 	<div class="demo-video-container">
-		<video width="800" controls>
+		<video width="800" controls poster="../../../assets/img/demo-poster.png">
 			<source src="../../../assets/videos/LemonPie-demo.mp4" type="video/mp4">
 			Your browser does not support HTML video.
 		</video>
