--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -10,5 +10,5 @@
 .demo-video-container {
 	border: 1px solid $mercury;
 	box-shadow: 1px 1px 9px -2px rgba(0, 0, 0, 0.3);
-	margin: 1rem auto 5rem auto;
+	margin: 4rem auto;
 }
