upgrade project version to v1.0.0

--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -12,10 +12,10 @@
 
 <footer>
 	<div class="footer-links">
-		<app-star-badge></app-star-badge>
-		&nbsp;
-		<span>v0.1.3</span>
+		<span>v1.0.0</span>
 		&nbsp;
 		<app-star-badge></app-star-badge>
+		&nbsp;
+		<a href="https://github.com/teresaPap/lemon-pie" target="_blank">GitHub Repo</a>
 	</div>
 </footer>
